--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -250,7 +250,7 @@
                         </LinearLayout>
                     </LinearLayout>
 
-                    <!-- CONTAINER: Attach/Take Photos -->
+                    <!-- Attach/Take Photos Container-->
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -294,6 +294,16 @@
                         </LinearLayout>
 
                     </LinearLayout>
+
+                    <!-- Print Receipt Container -->
+                    <Button
+                        android:id="@+id/action_print_receipt"
+                        style="@style/Urbanization.PrimaryButton.Colored.Dense"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:visible="@{viewModel.showPrintReceipt}"
+                        android:layout_marginTop="@dimen/dimens_16dp"
+                        android:text="@string/action_print_values" />
                 </LinearLayout>
             </androidx.core.widget.NestedScrollView>
 
