--- a/app/src/main/res/layout/activity_payment_list.xml
+++ b/app/src/main/res/layout/activity_payment_list.xml
@@ -143,7 +143,7 @@
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/add_payment_action"
                 style="@style/Urbanization.FloatingActionButton.Orange"
-                android:src="@drawable/fab_add_white"
+                android:src="@drawable/ic_payment_black_24dp"
                 android:contentDescription="@string/add_payment"
                 app:visible="@{viewModel.showAddPaymentButton()}"
                 tools:visibility="visible"/>
