--- a/app/src/main/res/layout/activity_dashboard_menu.xml
+++ b/app/src/main/res/layout/activity_dashboard_menu.xml
@@ -15,188 +15,191 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <!-- Toolbar -->
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?actionBarSize"
-            style="@style/UrbanizationMaterialToolbarWithSubtitle"
-            app:title="@string/welcome"
-            />
-
-        <FrameLayout
+        <!-- Downloading Information -->
+        <LinearLayout
+            android:id="@+id/connecting_to_server"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:visible="@{viewModel.showMenuList()}">
+            android:orientation="vertical"
+            android:padding="40dp"
+            android:gravity="center"
+            app:visible="@{!viewModel.showDashboard()}"
+            tools:visibility="gone">
 
-            <!-- Loading Payments -->
-            <LinearLayout
-                android:id="@+id/loading_menu_list"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:padding="40dp"
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:textSize="18dp"
+                android:text="@string/sync_information"
+                android:gravity="center"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/no_content_found"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="40dp"
+            android:gravity="center"
+            android:visibility="visible"
+            app:visible="@{viewModel.showErrorMessage()}"
+            tools:visibility="visible">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_error_56dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="@{viewModel.errorMessage}"
                 android:gravity="center"
-                app:visible="@{viewModel.isLoading}"
-                android:background="@color/default_background"
-                tools:visibility="gone">
+                tools:text="Error al sincronizar la información"/>
 
-                <ProgressBar
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/action_sync_information"
+                android:layout_width="240dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                style="@style/Inalambrik.PrimaryButton.Borderless.Colored"
+                android:text="Reintentar"
+                />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:text="@string/dashboard_menu_text"
-                    android:gravity="center"/>
+        </LinearLayout>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:text="@string/online_process_can_take_while"
-                    android:textSize="12sp"
-                    android:textColor="@color/material_black_hint"
-                    android:gravity="center"/>
+        <!-- Dashboard Container Layout-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:visibility="gone"
+            app:visible="@{viewModel.showDashboard()}"
+            android:orientation="vertical">
 
-            </LinearLayout>
+            <!-- Toolbar -->
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?actionBarSize"
+                style="@style/UrbanizationMaterialToolbarWithSubtitle"
+                app:title="@string/welcome"
+                />
 
-            <LinearLayout
-                android:id="@+id/general_container"
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:fitsSystemWindows="true"
-                android:orientation="vertical"
-                android:background="#ddd"
-                tools:visibility="visible"
-                app:visible="@{viewModel.showMenuList()}"
-                android:descendantFocusability="blocksDescendants">
+                app:visible="@{viewModel.showMenuList()}">
 
-                <!-- Panel Header Container (includes user pricture, name) -->
+                <!-- Loading Dashboard Menu -->
                 <LinearLayout
-                    android:id="@+id/user_info_container"
+                    android:id="@+id/loading_menu_list"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="#fff"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal"
-                    android:padding="16dp">
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:padding="40dp"
+                    android:gravity="center"
+                    app:visible="@{viewModel.isLoading}"
+                    android:background="@color/default_background"
+                    tools:visibility="gone">
 
-                    <!-- START: User Name, Imei and User Picture container -->
-                    <LinearLayout
-                        android:layout_width="0dp"
+                    <ProgressBar
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center_vertical">
+                        android:layout_marginTop="8dp"
+                        android:text="@string/dashboard_menu_text"
+                        android:gravity="center"/>
 
-                        <!-- User Image -->
-                        <FrameLayout
-                            android:layout_width="48dp"
-                            android:layout_height="48dp"
-                            android:layout_gravity="center_horizontal|center_vertical"
-                            android:paddingTop="@dimen/dimens_4dp"
-                            android:layout_marginRight="4dp"
-                            android:layout_marginEnd="4dp">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:text="@string/online_process_can_take_while"
+                        android:textSize="12sp"
+                        android:textColor="@color/material_black_hint"
+                        android:gravity="center"/>
 
-                            <ImageView
-                                android:id="@+id/user_picture_image_view"
+                </LinearLayout>
+
+                <!-- Menu Dashboard List Options -->
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:visible="@{viewModel.showMenuList()}"
+                    android:background="#ffffff">
+
+                    <ImageView
+                        android:id="@+id/imageView4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="300dp"
+                        android:scaleType="fitXY"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.0"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:srcCompat="@drawable/top_background" />
+
+                    <ImageView
+                        android:id="@+id/user_picture_image_view"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="64dp"
+                        app:layout_constraintEnd_toEndOf="@+id/imageView4"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:srcCompat="@drawable/profile" />
+
+                    <TextView
+                        android:id="@+id/textView11"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="32dp"
+                        android:text="@{viewModel.showUserNameTitle()}"
+                        tools:text="Hola Jonathan Lucero"
+                        android:textColor="#ffffff"
+                        android:textSize="22sp"
+                        android:textStyle="bold"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="@+id/imageView4"
+                        app:layout_constraintTop_toBottomOf="@+id/user_picture_image_view" />
+
+                    <ScrollView
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/imageView4">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical" >
+
+                            <androidx.recyclerview.widget.RecyclerView
+                                android:id="@+id/menu_recycler_view"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-                                android:layout_gravity="center_horizontal|center_vertical"
-                                tools:ignore="ContentDescription"
-                                tools:src="@drawable/ic_person_black_24dp" />
-
-                        </FrameLayout>
-
-                        <!-- User name / IMEI -->
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical"
-                            android:paddingLeft="4dp">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal">
-
-                                <TextView
-                                    android:id="@+id/user_name_text_view"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:maxLines="1"
-                                    android:ellipsize="end"
-                                    android:textColor="@color/material_black_primary"
-                                    android:textSize="16sp"
-                                    android:text="@{viewModel.userName}"
-                                    tools:text="Jonathan de Los Palotes" />
-
-
-                            </LinearLayout>
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal">
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="CI: "
-                                    android:textColor="@color/material_black_secondary"
-                                    android:textSize="14sp" />
-
-                                <TextView
-                                    android:id="@+id/user_imei_text_view"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:textColor="@color/material_black_secondary"
-                                    android:textSize="14sp"
-                                    android:text="@{viewModel.taxpayerId}"
-                                    tools:text="0927591891" />
-
-                            </LinearLayout>
+                                android:paddingTop="2dp"/>
 
                         </LinearLayout>
 
-                    </LinearLayout>
-                    <!-- END: User Name, Imei and User Picture container -->
 
-                    <!-- START: AccountLogo Container -->
-                    <LinearLayout
-                        android:layout_width="100dp"
-                        android:layout_height="wrap_content"
-                        android:padding="@dimen/dimens_4dp"
-                        android:id="@+id/logo_picture_container"
-                        tools:visibility="visible"
-                        android:gravity="center">
+                    </ScrollView>
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </FrameLayout>
 
-                        <ImageView
-                            android:id="@+id/logo_picture_image_view"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal|center_vertical"
-                            tools:ignore="ContentDescription"
-                            android:adjustViewBounds="true"
-                            android:maxHeight="50dp"
-                            tools:src="@drawable/santorini_logo"/>
+        </LinearLayout>
 
-
-                    </LinearLayout>
-
-                </LinearLayout>
-                <!-- END: AccountLogo Container -->
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/menu_recycler_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="#ddd"
-                    android:paddingTop="2dp"/>
-
-            </LinearLayout>
-        </FrameLayout>
     </LinearLayout>
 </layout>
