--- a/app/src/main/res/layout/list_item_menu.xml
+++ b/app/src/main/res/layout/list_item_menu.xml
@@ -5,11 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardUseCompatPadding="true"
-    app:cardElevation="2dp"
-    app:cardCornerRadius="2dp"
+    app:cardElevation="15dp"
+    app:cardCornerRadius="10dp"
     android:layout_weight="1"
     android:focusable="true"
     android:clickable="true"
+    android:layout_alignParentTop="true"
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentStart="true"
     android:foreground="?android:attr/selectableItemBackground">
 
     <LinearLayout
@@ -24,9 +27,7 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:src="@drawable/ic_person_black_24dp"
-            android:layout_gravity="center_horizontal|center_vertical"
-
-            />
+            android:layout_gravity="center_horizontal|center_vertical" />
 
         <TextView
             android:id="@+id/main_menu_item_text"
@@ -35,9 +36,6 @@
             android:text="Pagos"
             android:textSize="15sp"
             android:layout_gravity="center_horizontal"
-            android:textStyle="bold"
-            />
+            android:textStyle="bold" />
     </LinearLayout>
-
-
 </androidx.cardview.widget.CardView>
